Fixed scrollbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,27 @@ a:hover {
 	text-decoration:none;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 ul {
 	margin-left:5px;
 	padding-left:5px;
